* Fix Micrometer-driven metrics validation errors by the APM Server when sending with illegal values - {pull}1559[#1559]
* Serialize all stack trace frames when setting `stack_trace_limit=-1` instead of none - {pull}1571[#1571]
* Fix `UnsupportedOperationException` when calling `ServletContext.getClassLoader()` - {pull}1576[#1576]
* Fix improper request body capturing - {pull}1579[#1579]
* avoid `NullPointerException` due to null return values instrumentation advices - {pull}1601[#1601]
* Update async-profiler to 1.8.3 {pull}1602[1602]
* Use null-safe data structures to avoid `NullPointerException` {pull}1597[1597]

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1405[#1405] {pull}1394[#1394]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.19.0]]
==== 1.19.0 - 2020/11/10

[float]
===== Features
* The agent version now includes a git hash if it's a snapshot version.
  This makes it easier to differ distinct snapshot builds of the same version.
  Example: `1.18.1-SNAPSHOT.4655910`
* Add support for sampling weight with propagation in `tracestate` W3C header {pull}1384[#1384]
* Adding two more valid options to the `log_level` config: `WARNING` (equivalent to `WARN`) and `CRITICAL`
  (will be treated as `ERROR`) - {pull}1431[1431]
* Add the ability to disable Servlet-related spans for `INCLUDE`, `FORWARD` and `ERROR` dispatches (without affecting
  basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
* Add Sampling Profiler support for AArch64 architectures - {pull}1443[1443]
* Support proper transaction naming when using Spring's `ServletWrappingController` - {pull}1461[#1461]
* Update async-profiler to 1.8.2 {pull}1471[1471]
* Update existing Hibernate Search 6 instrumentation to work with the latest CR1 release
* Deprecating the `addLabel` public API in favor of `setLabel` (still supporting `addLabel`) - {pull}1449[#1449]

[float]
===== Bug fixes