@@ -436,7 +436,16 @@ public class CallTree implements Recyclable {
         }
     }
 
-    public void recycle(ObjectPool<CallTree> pool) {
+    /**
+     * Recycles this subtree to the provided pool recursively.
+     * Note that this method ends by recycling {@code this} node (i.e. - this subtree root), which means that
+     * <b>the caller of this method should make sure that no reference to this object is held anywhere</b>.
+     * <p>ALSO NOTE: MAKE SURE NOT TO CALL THIS METHOD FOR {@link CallTree.Root} INSTANCES.</p>
+     *
+     * @param pool the pool to which all subtree nodes are to be recycled
+     */
+    public final void recycle(ObjectPool<CallTree> pool) {
+        assert !(this instanceof Root);
         List<CallTree> children = this.children;
         for (int i = 0, size = children.size(); i < size; i++) {
             children.get(i).recycle(pool);
@@ -719,11 +728,21 @@ public class CallTree implements Recyclable {
             return rootContext.getClock().getEpochMicros(nanoTime);
         }
 
-        public void recycle(ObjectPool<CallTree> pool) {
+        /**
+         * Recycles this tree to the provided pools.
+         * First, all child subtrees are recycled recursively to the children pool.
+         * Then, {@code this} root node is recycled to the root pool. This means that <b>the caller of this method
+         * should make sure that no reference to this root object is held anywhere</b>.
+         *
+         * @param childrenPool object pool for all non-root nodes
+         * @param rootPool     object pool for root nodes
+         */
+        public void recycle(ObjectPool<CallTree> childrenPool, ObjectPool<CallTree.Root> rootPool) {
             List<CallTree> children = getChildren();
             for (int i = 0, size = children.size(); i < size; i++) {
-                children.get(i).recycle(pool);
+                children.get(i).recycle(childrenPool);
             }
+            rootPool.recycle(this);
         }
 
         public void end(ObjectPool<CallTree> pool, long minDurationNs) {
@@ -733,8 +752,11 @@ public class CallTree implements Recyclable {
         @Override
         public void resetState() {
             super.resetState();
+            rootContext.resetState();
             activeSpan = null;
             activationTimestamp = -1;
+            Arrays.fill(activeSpanSerialized, (byte) 0);
+            previousTopOfStack = null;
             topOfStack = null;
             activeSet.clear();
         }
