@@ -83,12 +83,12 @@ import static java.nio.file.StandardOpenOption.WRITE;
  * </p>
  * <p>
  * The {@link #onActivation} and {@link #onDeactivation} methods are called by {@link ProfilingActivationListener}
- * which register an {@link ActivationEvent} in to a {@linkplain #eventBuffer ring buffer} whenever a {@link Span}
+ * which register an {@link ActivationEvent} to a {@linkplain #eventBuffer ring buffer} whenever a {@link Span}
  * gets {@link Span#activate()}d or {@link Span#deactivate()}d while a {@linkplain #profilingSessionOngoing profiling session is ongoing}.
  * A background thread consumes the {@link ActivationEvent}s and writes them to a {@linkplain #activationEventsBuffer direct buffer}
  * which is flushed to a {@linkplain #activationEventsFileChannel file}.
  * That is necessary because within a profiling session (which lasts 10s by default) there may be many more {@link ActivationEvent}s
- * than the ring buffer can hold {@link #RING_BUFFER_SIZE}.
+ * than the ring buffer {@link #RING_BUFFER_SIZE can hold}.
  * The file can hold {@link #ACTIVATION_EVENTS_IN_FILE} events and each is {@link ActivationEvent#SERIALIZED_SIZE} in size.
  * This process is completely garbage free thanks to the {@link RingBuffer} acting as an object pool for {@link ActivationEvent}s.
  * </p>
@@ -335,11 +335,14 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
         if (!config.isProfilingEnabled() || !tracer.isRunning()) {
             if (jfrParser != null) {
                 jfrParser = null;
-                rootPool.clear();
-                callTreePool.clear();
             }
             if (!scheduler.isShutdown()) {
                 scheduler.schedule(this, config.getProfilingInterval().getMillis(), TimeUnit.MILLISECONDS);
+            }
+            try {
+                clear();
+            } catch (Throwable throwable) {
+                logger.error("Error while trying to clear profiler constructs", throwable);
             }
             return;
         }
@@ -391,6 +394,8 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
             if (!profiledThreads.isEmpty()) {
                 restoreFilterState(asyncProfiler);
             }
+            // Doesn't need to be atomic as this field is being updated only by a single thread
+            //noinspection NonAtomicOperationOnVolatileField
             profilingSessions++;
 
             // When post-processing is disabled activation events are ignored, but we still need to invoke this method
@@ -418,17 +423,22 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
      * we have to tell async-profiler which threads it should profile after re-starting it.
      */
     private void restoreFilterState(AsyncProfiler asyncProfiler) {
-        threadMatcher.forEachThread(new ThreadMatcher.NonCapturingPredicate<Thread, Long2ObjectHashMap<?>.KeySet>() {
-            @Override
-            public boolean test(Thread thread, Long2ObjectHashMap<?>.KeySet profiledThreads) {
-                return profiledThreads.contains(thread.getId());
-            }
-        }, profiledThreads.keySet(), new ThreadMatcher.NonCapturingConsumer<Thread, AsyncProfiler>() {
-            @Override
-            public void accept(Thread thread, AsyncProfiler asyncProfiler) {
-                asyncProfiler.enableProfilingThread(thread);
-            }
-        }, asyncProfiler);
+        threadMatcher.forEachThread(
+            new ThreadMatcher.NonCapturingPredicate<Thread, Long2ObjectHashMap<?>.KeySet>() {
+                @Override
+                public boolean test(Thread thread, Long2ObjectHashMap<?>.KeySet profiledThreads) {
+                    return profiledThreads.contains(thread.getId());
+                }
+            },
+            profiledThreads.keySet(),
+            new ThreadMatcher.NonCapturingConsumer<Thread, AsyncProfiler>() {
+                @Override
+                public void accept(Thread thread, AsyncProfiler asyncProfiler) {
+                    asyncProfiler.enableProfilingThread(thread);
+                }
+            },
+            asyncProfiler
+        );
     }
 
     private void consumeActivationEventsFromRingBufferAndWriteToFile(TimeDuration profilingDuration) throws Exception {
@@ -623,7 +633,9 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
 
     public void resetActivationEventBuffer() throws IOException {
         ((Buffer) activationEventsBuffer).clear();
-        activationEventsFileChannel.position(0L);
+        if (activationEventsFileChannel != null && activationEventsFileChannel.isOpen()) {
+            activationEventsFileChannel.position(0L);
+        }
     }
 
     private void flushActivationEvents() throws IOException {
@@ -691,7 +703,7 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
 
     public void clearProfiledThreads() {
         for (CallTree.Root root : profiledThreads.values()) {
-            root.recycle(callTreePool);
+            root.recycle(callTreePool, rootPool);
         }
         profiledThreads.clear();
     }
@@ -702,7 +714,6 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
     }
 
     void clear() throws IOException {
-        profiledThreads.clear();
         // consume all remaining events from the ring buffer
         try {
             poller.poll(new EventPoller.Handler<ActivationEvent>() {
@@ -716,6 +727,9 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
             throw new RuntimeException(e);
         }
         resetActivationEventBuffer();
+        profiledThreads.clear();
+        callTreePool.clear();
+        rootPool.clear();
     }
 
     int getProfilingSessions() {
@@ -834,8 +848,7 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
                 if (logger.isDebugEnabled()) {
                     logger.warn("Illegal state when stopping profiling for thread {}: orphaned root", threadId);
                 }
-                orphaned.recycle(samplingProfiler.callTreePool);
-                samplingProfiler.rootPool.recycle(orphaned);
+                orphaned.recycle(samplingProfiler.callTreePool, samplingProfiler.rootPool);
             }
         }
 
@@ -867,17 +880,19 @@ public class SamplingProfiler extends AbstractLifecycleListener implements Runna
                     logger.debug("End call tree ({}) for thread {}", deserialize(samplingProfiler, traceContextBuffer), threadId);
                 }
                 samplingProfiler.profiledThreads.remove(threadId);
-                callTree.end(samplingProfiler.callTreePool, samplingProfiler.getInferredSpansMinDurationNs());
-                int createdSpans = callTree.spanify();
-                if (logger.isDebugEnabled()) {
-                    if (createdSpans > 0) {
-                        logger.debug("Created spans ({}) for thread {}", createdSpans, threadId);
-                    } else {
-                        logger.debug("Created no spans for thread {} (count={})", threadId, callTree.getCount());
+                try {
+                    callTree.end(samplingProfiler.callTreePool, samplingProfiler.getInferredSpansMinDurationNs());
+                    int createdSpans = callTree.spanify();
+                    if (logger.isDebugEnabled()) {
+                        if (createdSpans > 0) {
+                            logger.debug("Created spans ({}) for thread {}", createdSpans, threadId);
+                        } else {
+                            logger.debug("Created no spans for thread {} (count={})", threadId, callTree.getCount());
+                        }
                     }
+                } finally {
+                     callTree.recycle(samplingProfiler.callTreePool, samplingProfiler.rootPool);
                 }
-                callTree.recycle(samplingProfiler.callTreePool);
-                samplingProfiler.rootPool.recycle(callTree);
             }
         }
 
