@@ -43,9 +43,10 @@ endif::[]
 * Serialize all stack trace frames when setting `stack_trace_limit=-1` instead of none - {pull}1571[#1571]
 * Fix `UnsupportedOperationException` when calling `ServletContext.getClassLoader()` - {pull}1576[#1576]
 * Fix improper request body capturing - {pull}1579[#1579]
-* avoid `NullPointerException` due to null return values instrumentation advices - {pull}1601[#1601]
+* Avoid `NullPointerException` due to null return values instrumentation advices - {pull}1601[#1601]
 * Update async-profiler to 1.8.3 {pull}1602[1602]
 * Use null-safe data structures to avoid `NullPointerException` {pull}1597[1597]
+* Fix memory leak in sampling profiler mechanism - {pull}1592[#1592]
 
 [float]
 ===== Refactors
